<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Rocky Quiz</string>
    <string name="submit">Calculate my score</string>
    <string name="title">Welcome to take the Rocky Quiz!</string>

    <string name="question1">1. What is Rocky\'s hometown?</string>
    <string name="question1answer1" translatable="false">Philadelphia</string>
    <string name="question1answer2" translatable="false">Boston</string>
    <string name="question1answer3" translatable="false">New York</string>
    <string name="question1answer4" translatable="false">Atlanta</string>

    <string name="question2">2. What is the first name of Rocky\'s wife?</string>
    <string name="question2hint">Name of his wife</string>
    <string name="question2answer" translatable="false">Adrian</string>

    <string name="question3">3. Against who has Rocky fought?</string>
    <string name="question3answer1" translatable="false">Spider Rico</string>
    <string name="question3answer2" translatable="false">Joe Frazier</string>
    <string name="question3answer3" translatable="false">Ivan Drago</string>
    <string name="question3answer4" translatable="false">Ray Mancini</string>

    <string name="question4">4. How many times has Rocky been knocked out in the films?</string>
    <integer name="question4answer">1</integer>

    <string name="question5">5. What is the first name of Rocky\'s son?</string>
    <string name="question5answer1" translatable="false">Rocky Junior</string>
    <string name="question5answer2" translatable="false">Richard</string>
    <string name="question5answer3" translatable="false">Robert</string>
    <string name="question5answer4" translatable="false">Rolf</string>

    <string name="question6">6. What is the name of the 7th film?</string>
    <string name="question6hint">Name of the 7th film</string>
    <string name="question6answer" translatable="false">Creed</string>

    <string name="question7">7. Who have been Rocky\'s trainers?</string>
    <string name="question7answer1" translatable="false">Mason Dixon</string>
    <string name="question7answer2" translatable="false">Mickey Goldmill</string>
    <string name="question7answer3" translatable="false">Apollo Creed</string>
    <string name="question7answer4" translatable="false">Rocky Marciano</string>

    <string name="question8">8. Which of the songs is NOT famous from Rocky films?</string>
    <string name="question8answer1" translatable="false">Eye of the Tiger</string>
    <string name="question8answer2" translatable="false">Gonna Fly Now</string>
    <string name="question8answer3" translatable="false">Burning heart</string>
    <string name="question8answer4" translatable="false">Untouchable</string>

    <string name="question9">9. Where does Rocky propose to his future wife?</string>
    <string name="question9answer1">At his home</string>
    <string name="question9answer2">At her home</string>
    <string name="question9answer3">In a zoo</string>
    <string name="question9answer4">In a boxing ring</string>

    <string name="question10">10. What is the name of the restaurant Rocky runs in movies 6 and 7?</string>
    <string name="question10hint">Name of the restaurant</string>
    <string name="question10answer" translatable="false">Adrian\'s</string>

    <string name="result">You got right <xliff:g id="rightAnswers" example="10">%d</xliff:g>/10</string>
    <string name="reset">Reset quiz</string>
</resources>
